fixed some text aligning

--- a/styles.css
+++ b/styles.css
@@ -22,7 +22,7 @@ body:after {
 	color: lightgrey;
 	font-family: 'Raleway', sans-serif;
 	position: absolute;
-	bottom: 100px;
+	bottom: 120px;
 	right: 100px;
 	text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 }
